[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/ui/progress_under.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/ui/progress_over.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/progress_progress.png" type="Texture" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 960.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 958.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 949.0
margin_bottom = 21.0

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 14.0
rect_min_size = Vector2( 200, 0 )

[node name="Bataar" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/NameContainer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Bataar"

[node name="LevelValue" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/NameContainer"]
margin_left = 44.0
margin_right = 75.0
margin_bottom = 14.0
text = "lvl. 1"

[node name="HealthContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 344.0
margin_bottom = 14.0
rect_min_size = Vector2( 140, 0 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/HealthContainer"]
margin_right = 46.0
margin_bottom = 14.0
text = "Health:"

[node name="HealthValue" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/HealthContainer"]
margin_left = 50.0
margin_right = 87.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "50/50"

[node name="StaminaContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 348.0
margin_right = 468.0
margin_bottom = 14.0
rect_min_size = Vector2( 120, 0 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/StaminaContainer"]
margin_right = 55.0
margin_bottom = 14.0
text = "Stamina:"

[node name="StaminaValue" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/StaminaContainer"]
margin_left = 59.0
margin_right = 96.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.941176, 0.92549, 0.0392157, 1 )
text = "10/25"

[node name="BataarActionTimerContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 472.0
margin_right = 705.0
margin_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/BataarActionTimerContainer"]
margin_left = 115.0
margin_right = 159.0
margin_bottom = 14.0
text = "Bataar:"

[node name="ActionTimer" type="TextureProgress" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/BataarActionTimerContainer"]
margin_left = 163.0
margin_right = 233.0
margin_bottom = 14.0
rect_min_size = Vector2( 70, 0 )
value = 50.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5

[node name="BurgActionTimerContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 709.0
margin_right = 942.0
margin_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/BurgActionTimerContainer"]
margin_left = 126.0
margin_right = 159.0
margin_bottom = 14.0
text = "Burg:"

[node name="ActionTimer" type="TextureProgress" parent="VBoxContainer/MarginContainer/PanelContainer/HBoxContainer/BurgActionTimerContainer"]
margin_left = 163.0
margin_right = 233.0
margin_bottom = 14.0
rect_min_size = Vector2( 70, 0 )
value = 50.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
